# eclipse

./: .eclipse  .gitignore  Makefile.in  clx-ext.asd  clx-patch.lisp  compile.lisp  config.lisp.in  configure  configure.in  cursor.lisp  cursordef.lisp  eclipse-lib.asd  eclipse.asd  eclipse.in  eclipse.lisp  eclipserc  event.lisp  gestures.lisp  global.lisp  gnome-manager.lisp  ice-lib.asd  image-reader.lisp  input.lisp  install-sh  keysymdef.lisp  keysyms.lisp  load-eclipse.lisp.in  menu.lisp  misc.lisp  move-resize.lisp  package.lisp  programmed-tasks.lisp  rectangles.lisp  sm-lib.asd  system.lisp  themer.lisp  virtual-screen.lisp  widgets.lisp  wm.lisp  xnest
docs/: COPYING  README  changelog  complience.txt  eclipse.1
lib/: .gitignore  gnome-manager.lisp  image-reader.lisp  manager-commons.lisp  netwm-manager.lisp
lib/clx-ext/: clx-extensions.lisp  clx-patch.lisp  cursor.lisp  cursordef.lisp  event.lisp  keysymdef.lisp  keysyms.lisp  package.lisp  xvidmode.lisp
lib/ice/: ICE-auth.lisp  ICE-buffer.lisp  ICE-lib.lisp  ICE-macros.lisp  ICE-request.lisp  ICE.lisp  dependent.lisp  package.lisp  system.lisp
lib/sm/: .gitignore  package.lisp  sm.lisp  system.lisp
lisp-dep/: clisp.lisp
themes/CoolClean/: README  bottom-left.pnm  bottom-right.pnm  bottom.pnm  close-active-clicked.pnm  close-active.pnm  left.pnm  maximize-active-clicked.pnm  maximize-active.pnm  menu-button-active.pnm  minimize-active-clicked.pnm  minimize-active.pnm  right.pnm  t-close-active-clicked.pnm  t-close-active.pnm  theme.lisp  theme.x86f  top-active.pnm  top-inactive.pnm  top-right.pnm
themes/Step/: bottom-left.pnm  bottom-right.pnm  bottom.pnm  close-active-clicked.pnm  close-active.pnm  close-inactive-clicked.pnm  close-inactive.pnm  menu-button-active-clicked.pnm  menu-button-active.pnm  menu-button-inactive-clicked.pnm  menu-button-inactive.pnm  side.pnm  t-top-left-a.pnm  t-top-left-i.pnm  theme.lisp  theme.x86f  top-active.pnm  top-inactive.pnm
themes/brushed-metal/: README  bottom-a.pnm  bottom-i.pnm  bottom-left-a.pnm  bottom-right-a.pnm  bottom-right-i.pnm  close-a-clicked.pnm  close-a.pnm  close-i-clicked.pnm  close-i.pnm  left-a.pnm  left-i.pnm  maximize-a-clicked.pnm  maximize-a.pnm  maximize-i-clicked.pnm  maximize-i.pnm  menu-button-a-clicked.pnm  menu-button-a.pnm  menu-button-i-clicked.pnm  menu-button-i.pnm  minimize-a-clicked.pnm  minimize-a.pnm  minimize-i-clicked.pnm  minimize-i.pnm  right-a.pnm  right-i.pnm  t-bottom-a.pnm  t-bottom-i.pnm  t-bottom-left-a.pnm  t-bottom-left-i.pnm  t-bottom-right-a.pnm  t-left-a.pnm  t-left-i.pnm  t-right-a.pnm  t-right-i.pnm  t-top-a.pnm  t-top-i.pnm  t-top-left-a.pnm  t-top-left-i.pnm  t-top-right-a.pnm  (+13 more)
themes/microGUI/: README  bottom.pnm  bottom_left.pnm  bottom_right.pnm  center.pnm  close-active-clicked.pnm  close-normal-clicked.pnm  close-normal.pnm  close_active.pnm  iconify-active-clicked.pnm  iconify-active.pnm  iconify-normal-clicked.pnm  iconify_normal.pnm  left.pnm  maximize-active-clicked.pnm  maximize-normal-clicked.pnm  maximize-normal.pnm  maximize_active.pnm  menu-active-clicked.pnm  menu-active.pnm  menu-clicked.pnm  menu-normal-clicked.pnm  menu-normal.pnm  right.pnm  t-bottom-left.pnm  t-bottom-right.pnm  t-close-active.pnm  t-close-clicked.pnm  t-close-normal-clicked.pnm  t-close-normal.pnm  t-left.pnm  t-right.pnm  t-top-left.pnm  t-top-right.pnm  t-top.pnm  theme.lisp  theme.x86f  top-blue-inactive.pnm  top-blue.pnm  top-curves-inactive.pnm  (+5 more)
